--- a/Zyro Kodah/zyro-kodah.scss
+++ b/Zyro Kodah/zyro-kodah.scss
@@ -4,7 +4,8 @@
     $default_color: rgb(0,0,0);
 
     font-family: 'Josefin Slab', serif;
-    border: 1px solid greenyellow;
+    // border: 1px solid greenyellow;
+    // background-color: beige;
     color: $default_color;
 
     body, ul, h1, h2, h3, h4, h5, h6, p {
@@ -30,66 +31,293 @@
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 // navigation - start ►
 #nav {
+    // display: none;
+    position: sticky;
+    top: 0px;
+    padding: 0 5%;
+    z-index: 2;
     .nav {
-        @media only screen and (max-width: 767px) {}
-        @media only screen and (max-width: 991px) {}
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 80px;
+        background-color: rgb(255,255,255);
 
-        &--link {
-            @media only screen and (max-width: 767px) {}
-            @media only screen and (max-width: 991px) {}
+        &--links {
+            font-size: 20px;
+            transition: linear 0.15s;
+            &:hover {
+                border-bottom: 1px solid rgb(0,0,0);
+                transition: linear 0.15s;
+            }
+            // extra-small-device 575, mobile 767, tablet 991, desktop 1199px
+            @media only screen and (max-width: 575px) {
+                font-size: 24px;
+                display: flex;
+                align-items: center;
+            }
+            @media only screen and (max-width: 767px) {
+                font-size: 26px;
+                display: flex;
+                align-items: center;
+            }
+            @media only screen and (max-width: 991px) {
+                font-size: 30px;
+                display: flex;
+                align-items: center;
+            }
         }
         &--logo {
-            @media only screen and (max-width: 767px) {}
-            @media only screen and (max-width: 991px) {}
+            width: 110px;
         }
         &--button {
-            @media only screen and (max-width: 767px) {}
-            @media only screen and (max-width: 991px) {}
+            width: 50px;
+            height: 50px;
+            display: none;
+            @media only screen and (max-width: 575px) {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            @media only screen and (max-width: 767px) {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            @media only screen and (max-width: 991px) {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
         }
         &--menu {
-            @media only screen and (max-width: 767px) {}
-            @media only screen and (max-width: 991px) {}
+            display: flex;
+            column-gap: 50px;
+            @media only screen and (max-width: 575px) {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                padding: 5%;
+                width: 90%;
+                row-gap: 60px;
+                background-color: rgb(255,255,255);
+                visibility: hidden;
+                transform: translateY(-130px) scaleY(0.0);
+                transition: linear 0.15s;
+            }
+            @media only screen and (max-width: 767px) {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                padding: 5%;
+                width: 90%;
+                row-gap: 60px;
+                background-color: rgb(255,255,255);
+                visibility: hidden;
+                transform: translateY(-130px) scaleY(0.0);
+                transition: linear 0.15s;
+            }
+            @media only screen and (max-width: 991px) {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                position: absolute;
+                top: 100%;
+                left: 0;
+                padding: 5%;
+                width: 90%;
+                row-gap: 60px;
+                background-color: rgb(255,255,255);
+                visibility: hidden;
+                transform: translateY(-130px) scaleY(0.0);
+                transition: linear 0.15s;
+            }
         }
-        .fa-bars {}
+        .nav--button:hover ~ .nav--menu {
+            visibility: visible;
+            transform: translateY(0px) scaleY(1.0);
+            transition: linear 0.15s;
+        }
+        .fa-bars {
+            scale: 3.4 3;
+        }
     }
 }
 // navigation - end ◄
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 // main sections - start ►
 #main {
+    // display: none;
+    position: relative;
+    width: 90%;
+    left: 5%;
+    z-index: 1;
     .section {
         .travelling {
-            &__columns {
-                &--image {}
-                &--h1 {}
-                &--h6 {}
-                &--paragraph {}
+            display: flex;
+            justify-content: center;
+            @media only screen and (max-width: 575px) {
+                flex-wrap: wrap;
             }
-
-            @media only screen and (max-width: 575px) {}
-            @media only screen and (max-width: 991px) {}
+            @media only screen and (max-width: 767px) {
+                flex-wrap: wrap;
+            }
+            @media only screen and (max-width: 991px) {
+                flex-wrap: wrap;
+            }
+            &__columns {
+                width: 50%;
+                @media only screen and (max-width: 575px) {
+                    width: 100%;
+                }
+                @media only screen and (max-width: 767px) {
+                    width: 100%;
+                }
+                @media only screen and (max-width: 991px) {
+                    width: 100%;
+                }
+                &--image {
+                    width: 100%;
+                }
+                &--h1 {
+                    font-size: 60px;
+                    padding: 100px 130px 0 140px;
+                    line-height: 80px;
+                    @media only screen and (max-width: 575px) {
+                        padding: 10px 130px 0 10px;
+                    }
+                    @media only screen and (max-width: 767px) {
+                        padding: 10px 130px 0 10px;
+                    }
+                    @media only screen and (max-width: 991px) {
+                        padding: 10px 130px 0 10px;
+                    }
+                }
+                &--h6 {
+                    font-size: 28px;
+                    padding: 20px 0 0 140px;
+                    @media only screen and (max-width: 575px) {
+                        padding: 10px 130px 0 10px;
+                    }
+                    @media only screen and (max-width: 767px) {
+                        padding: 10px 130px 0 10px;
+                    }
+                    @media only screen and (max-width: 991px) {
+                        padding: 10px 130px 0 10px;
+                    }
+                }
+                &--paragraph {
+                    padding: 80px 200px 0 140px;
+                    line-height: 20px;
+                    @media only screen and (max-width: 575px) {
+                        padding: 20px 130px 0 10px;
+                    }
+                    @media only screen and (max-width: 767px) {
+                        padding: 20px 130px 0 10px;
+                    }
+                    @media only screen and (max-width: 991px) {
+                        padding: 20px 130px 0 10px;
+                    }
+                }
+            }
         }
         .most-routes {
-            &__header {}
+            &__header {
+                font-size: 40px;
+                text-align: center;
+                margin: 160px 0 40px 0;
+            }
             &__container {
+                display: flex;
+                justify-content: center;
+                column-gap: 1%;
+                row-gap: 20px;
+                flex-wrap: wrap;
                 &--cards {
-                    &_photo {}
-                    &_title {}
-                    &_description {}
-                    &_date {}
+                    display: flex;
+                    flex-direction: column;
+                    width: 49%;
+                    row-gap: 20px;
+                    @media only screen and (max-width: 575px) {
+                        width: 100%;
+                    }
+                    @media only screen and (max-width: 767px) {
+                        width: 100%;
+                    }
+                    @media only screen and (max-width: 991px) {
+                        width: 100%;
+                    }
+                    &_photo {
+                        object-fit: cover;
+                        width: 100%;
+                        height: 308px;
+                    }
+                    &_title {
+                        font-size: 22px;
+                        font-weight: 600;
+                    }
+                    &_description {
+                        font-size: 20px;
+                    }
+                    &_date {
+                        font-size: 20px;
+                    }
                 }
             }
             &__links {}
-            &__button {}
-
-            @media only screen and (max-width: 575px) {}
-            @media only screen and (max-width: 991px) {}
+            &__button {
+                position: relative;
+                left: 41%;
+                font-size: 20px;
+                width: 220px;
+                height: 60px;
+                margin: 60px 0 80px 0;
+                cursor: pointer;
+                border: 1px solid rgb(0,0,0);
+                background-color: transparent;
+                @media only screen and (max-width: 575px) {
+                    left: 28%;
+                }
+                @media only screen and (max-width: 767px) {
+                    left: 28%;
+                }
+                @media only screen and (max-width: 991px) {
+                    left: 28%;
+                }
+            }
         }
         .gallery {
-            &__images {}
-
-            @media only screen and (max-width: 575px) {}
-            @media only screen and (max-width: 991px) {}
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-bottom: 60px;
+            column-gap: 20px;
+            &__images {
+                object-fit: cover;
+                width: 300px;
+                height: 300px;
+                @media only screen and (max-width: 575px) {
+                    width: 240px;
+                    height: 240px;
+                    margin-bottom: 10px;
+                }
+                @media only screen and (max-width: 767px) {
+                    width: 240px;
+                    height: 240px;
+                    margin-bottom: 10px;
+                }
+                @media only screen and (max-width: 991px) {
+                    width: 240px;
+                    height: 240px;
+                    margin-bottom: 10px;
+                }
+            }
         }
     }
 }
@@ -97,20 +325,75 @@
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 // footer - end ◄
 #footer {
+    // display: none;
+    position: relative;
+    width: 90%;
+    left: 5%;
+    z-index: 1;
     .footer {
+        height: 300px;
         .footer--column {
-            &__form {
-                &--label {}
-                &--input {}
-                &--button {}
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: relative;
+            top: 25%;
+            @media only screen and (max-width: 575px) {
+                flex-wrap: wrap;
+                top: 10%;
             }
-            &__social {
-                &--link {}
+            @media only screen and (max-width: 767px) {
+                flex-wrap: wrap;
+                top: 10%;
+            }
+            @media only screen and (max-width: 991px) {
+                flex-wrap: wrap;
+                top: 10%;
             }
         }
         .fa-brands {}
-
+        &__form {
+            &--label {
+                font-size: 20px;
+                font-weight: 600;
+            }
+            &--input {
+                outline: none;
+                border: none;
+                width: 400px;
+                height: 45px;
+                font-size: 20px;
+                padding-left: 10px;
+                margin: 5px 0 20px;
+            }
+            &--button {
+                width: 160px;
+                height: 60px;
+                font-size: 20px;
+                cursor: pointer;
+                border: 1px solid rgb(0,0,0);
+                background-color: transparent;
+            }
+        }
+        &__social {
+            display: flex;
+            column-gap: 30px;
+            margin-right: 60px;
+            @media only screen and (max-width: 575px) {
+                margin-top: 30px;
+            }
+            @media only screen and (max-width: 767px) {
+                margin-top: 30px;
+            }
+            @media only screen and (max-width: 991px) {
+                margin-top: 30px;
+            }
+            &--link {
+                scale: 1.3;
+            }
+        }
         @media only screen and (max-width: 575px) {}
+        @media only screen and (max-width: 767px) {}
         @media only screen and (max-width: 991px) {}
     }
 }
