--- a/Zyro Regis/zyro-regis.css
+++ b/Zyro Regis/zyro-regis.css
@@ -1,1 +1,94 @@
-/*# sourceMappingURL=zyro-regis.css.map */
+* {
+  border: 1px solid red;
+  color: rgb(0, 0, 0);
+}
+* body, * h1, * h2, * h3, * h4, * h5, * h6, * ul, * p {
+  margin: 0;
+  padding: 0;
+}
+* li {
+  list-style: none;
+}
+* a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+
+#nav {
+  padding: 0 6%;
+  height: 100px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0%;
+  background-color: rgb(255, 255, 255);
+}
+#nav .nav {
+  display: flex;
+  align-items: center;
+  position: relative;
+  top: 20%;
+  flex-direction: column;
+}
+#nav .nav__logo {
+  width: 80px;
+}
+#nav .nav__button {
+  display: none;
+}
+@media only screen and (max-width: 767px) {
+  #nav .nav__button {
+    display: block;
+  }
+}
+#nav .nav__menus {
+  display: flex;
+  flex-direction: row;
+  -moz-column-gap: 50px;
+       column-gap: 50px;
+}
+@media only screen and (max-width: 767px) {
+  #nav .nav__menus {
+    background-color: red;
+  }
+}
+#nav .nav__menus--link {
+  font-size: 20px;
+  transition: linear 0.2s;
+}
+#nav .nav__menus--link:hover {
+  border-bottom: 1px solid black;
+  transition: linear 0.2s;
+}
+
+#main {
+  padding: 0 6%;
+}
+#main .main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 5px;
+}
+#main .main__images {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+#footer {
+  padding: 0 6%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+}
+#footer .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -moz-column-gap: 140px;
+       column-gap: 140px;
+}
+#footer .footer__links {
+  scale: 2;
+}/*# sourceMappingURL=zyro-regis.css.map */
