--- a/Zyro Oakland/zyro-oakland.css
+++ b/Zyro Oakland/zyro-oakland.css
@@ -1,1 +1,312 @@
-/*# sourceMappingURL=zyro-oakland.css.map */
+* a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+* li {
+  list-style: none;
+}
+* body, * ul, * h1, * h2, * h3, * h4, * h5, * h6, * p {
+  margin: 0px;
+  padding: 0px;
+}
+
+#nav {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0%;
+  background-color: rgb(255, 255, 255);
+  z-index: 2;
+}
+#nav .nav {
+  padding: 0 5%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  background-color: rgb(255, 255, 255);
+}
+@media only screen and (max-width: 991px) {
+  #nav .nav {
+    width: 47.6%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #nav .nav {
+    width: 64.6%;
+  }
+}
+#nav .nav__logo {
+  width: 180px;
+}
+@media only screen and (max-width: 991px) {
+  #nav .nav__logo {
+    width: 160px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #nav .nav__logo {
+    width: 140px;
+  }
+}
+#nav .nav__button {
+  display: none;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+}
+@media only screen and (max-width: 991px) {
+  #nav .nav__button {
+    display: block;
+    position: relative;
+    left: 5%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #nav .nav__button {
+    display: block;
+    position: relative;
+    left: 5%;
+  }
+}
+#nav .fa-bars {
+  scale: 3.4 3;
+  background-color: transparent;
+}
+#nav .nav__menus {
+  display: flex;
+  -moz-column-gap: 60px;
+       column-gap: 60px;
+}
+@media only screen and (max-width: 991px) {
+  #nav .nav__menus {
+    display: none;
+    flex-direction: column;
+    align-items: flex-end;
+    position: relative;
+    width: 60%;
+    top: 91%;
+    left: -43%;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(0, 0, 0);
+  }
+}
+@media only screen and (max-width: 767px) {
+  #nav .nav__menus {
+    display: none;
+    flex-direction: column;
+    align-items: flex-end;
+    position: relative;
+    width: 100%;
+    top: 91%;
+    left: -27%;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(0, 0, 0);
+  }
+}
+#nav .nav__menus--links {
+  font-size: 24px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: linear 0.15s;
+}
+#nav .nav__menus--links:hover {
+  border-bottom: 1px solid rgb(0, 0, 0);
+  transition: linear 0.15s;
+}
+#nav .nav__button:hover ~ .nav__menus {
+  display: flex;
+}
+
+#main {
+  padding: 0 5% 0;
+}
+#main .main__contact {
+  padding: 150px 0 150px;
+}
+#main .main__contact--title {
+  font-size: 60px;
+  font-weight: 900;
+  color: rgba(255, 16, 16, 0.95);
+  width: 65%;
+  text-align: center;
+  position: relative;
+  left: 18%;
+}
+#main .main__contact--button {
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  width: 140px;
+  height: 50px;
+  cursor: pointer;
+  font-weight: 700;
+  position: relative;
+  left: 45%;
+}
+#main .main__contact--button:hover {
+  background-color: rgb(64, 64, 64);
+}
+#main .main__bgcontact {
+  width: 100%;
+  height: 400px;
+  background-image: url(./zyro-oakland-assets/alex-suprun-N60_1zpWNtU-unsplash.avif);
+}
+#main .main__aboutus {
+  padding: 150px 0 50px;
+}
+#main .main__aboutus--title {
+  font-size: 50px;
+  font-weight: 600;
+  color: rgba(255, 16, 16, 0.95);
+  width: 60%;
+  text-align: center;
+  position: relative;
+  left: 20%;
+  margin-bottom: 50px;
+}
+#main .main__aboutus--text {
+  font-size: 18px;
+  text-align: center;
+  width: 55%;
+  position: relative;
+  left: 22%;
+  margin-bottom: 40px;
+}
+#main .main__aboutus--screen {
+  width: 80%;
+  height: 600px;
+  position: relative;
+  left: 10%;
+  background-color: rgb(0, 0, 0);
+}
+#main .main__details {
+  width: 100%;
+  height: 1000px;
+  padding: 50px 0 50px;
+  background-color: rgba(255, 16, 16, 0.95);
+}
+#main .main__details--lists {
+  font-size: 50px;
+  font-weight: 600;
+  color: rgb(255, 255, 255);
+  background-color: rgba(255, 16, 16, 0.95);
+  text-align: center;
+  position: relative;
+  left: 0%;
+  margin: 80px 0 80px;
+}
+#main .main__bgaboutus {
+  width: 100%;
+  height: 400px;
+  background-image: url(./zyro-oakland-assets/alex-suprun-AHnhdjyTNGM-unsplash.avif);
+}
+#main .main__projects {
+  padding: 150px 0 150px;
+}
+#main .main__projects--title {
+  font-size: 50px;
+  font-weight: 600;
+  color: rgba(255, 16, 16, 0.95);
+  width: 60%;
+  text-align: center;
+  position: relative;
+  left: 20%;
+  margin-bottom: 100px;
+}
+#main .main__projects--text {
+  font-size: 18px;
+  text-align: center;
+  width: 55%;
+  position: relative;
+  left: 22%;
+  margin-bottom: 100px;
+}
+#main .main__projects--container {
+  display: flex;
+  justify-content: space-between;
+}
+#main .main__projects--container_images {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 32%;
+}
+#main .main__projects--button {
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  width: 140px;
+  height: 50px;
+  cursor: pointer;
+  font-weight: 700;
+  position: relative;
+  left: 45%;
+  margin-top: 100px;
+}
+#main .main__projects--button:hover {
+  background-color: rgb(64, 64, 64);
+}
+#main .main__comment {
+  background-color: rgba(255, 16, 16, 0.95);
+  height: 500px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+#main .main__comment--header {
+  position: relative;
+  top: 50px;
+  font-size: 50px;
+  width: 70%;
+  background-color: rgba(255, 16, 16, 0.95);
+  color: rgb(255, 255, 255);
+}
+#main .main__comment--info {
+  position: relative;
+  top: -50px;
+  left: -18%;
+  width: 30%;
+  background-color: rgba(255, 16, 16, 0.95);
+  color: rgb(255, 255, 255);
+}
+
+#footer .footer {
+  position: relative;
+  width: 90%;
+  left: 5%;
+  height: 500px;
+  background-color: rgb(16, 16, 16);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 100px;
+}
+#footer .footer__title {
+  font-size: 50px;
+  text-align: center;
+  width: 100%;
+  color: rgb(255, 255, 255);
+}
+#footer .footer__button {
+  background-color: rgba(255, 16, 16, 0.95);
+  color: rgb(255, 255, 255);
+  width: 140px;
+  height: 50px;
+  cursor: pointer;
+  font-weight: 700;
+}
+#footer .footer__button:hover {
+  background-color: rgb(255, 128, 128);
+}
+#footer .footer__social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -moz-column-gap: 80px;
+       column-gap: 80px;
+  color: rgb(255, 255, 255);
+}
+#footer .fa-brands {
+  scale: 1.3;
+}/*# sourceMappingURL=zyro-oakland.css.map */
