--- a/Zyro Oakland/zyro-oakland.scss
+++ b/Zyro Oakland/zyro-oakland.scss
@@ -140,6 +140,7 @@
         width: 100%;
         height: 400px;
         background-image: url(./zyro-oakland-assets/alex-suprun-N60_1zpWNtU-unsplash.avif);
+        background-attachment: fixed;
     }
     .main__aboutus {
         padding: 150px 0 50px;
@@ -191,6 +192,7 @@
         width: 100%;
         height: 400px;
         background-image: url(./zyro-oakland-assets/alex-suprun-AHnhdjyTNGM-unsplash.avif);
+        background-attachment: fixed;
     }
     .main__projects {
         padding: 150px 0 150px;
