--- a/03 ■► JS DOM/tasks/2023 → 02 → 22/01 ► single item slide.css
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 22/01 ► single item slide.css
@@ -9,6 +9,19 @@
   text-decoration: none;
 }
 
+.dots {
+  position: absolute;
+  top: 96.8%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.dots__radios {
+  accent-color: rgb(0, 0, 0);
+}
+.dots__radios:checked {
+  transform: scale(1.4);
+}
+
 .btn {
   border: 1px solid rgb(128, 128, 128);
   color: rgb(128, 128, 128);
@@ -34,14 +47,18 @@
 }
 
 .slider {
-  width: 99.82%;
-  height: 99.82%;
-  border: 1px solid red;
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  border: 1px solid rgb(0, 0, 0);
+  overflow: hidden;
 }
 
 .slide {
-  width: 80%;
+  width: 70%;
   position: absolute;
+  padding: 3% 15%;
+  transition: all 0.4s;
 }
 .slide img {
   width: 100%;
