--- a/03 ■► JS DOM/tasks/2023 → 02 → 21/02 ► A dialog with three buttons - sass.css
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 21/02 ► A dialog with three buttons - sass.css
@@ -1,1 +1,176 @@
-/*# sourceMappingURL=02 ► A dialog with three buttons - sass.css.map */
+* html, * body, * h1, * h2, * h3, * h4, * h5, * h6, * ul, * p {
+  margin: 0;
+  padding: 0;
+}
+* li {
+  list-style: none;
+}
+* a {
+  text-decoration: none;
+}
+
+body {
+  width: 100%;
+  height: 750px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: 0;
+}
+body img {
+  width: 100%;
+  height: 100%;
+}
+
+.modal {
+  z-index: 3;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 6px;
+  color: rgb(0, 0, 0);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255, 255, 255);
+  width: 800px;
+  height: 250px;
+  text-align: center;
+}
+.modal__header {
+  margin-top: 50px;
+  font-size: 50px;
+}
+.modal__save {
+  margin-top: 60px;
+  width: 70px;
+  height: 30px;
+  background-color: rgb(0, 128, 0);
+}
+.modal__dont-save {
+  margin: 60px 10px 0;
+  width: 110px;
+  height: 30px;
+  background-color: rgb(128, 0, 0);
+}
+.modal__cancel {
+  margin-top: 60px;
+  width: 90px;
+  height: 30px;
+  background-color: rgb(128, 128, 128);
+}
+
+.overlay {
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 750px;
+  background: rgba(0, 0, 0, 0.3);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+}
+
+.successfully-saved {
+  z-index: 3;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 6px;
+  color: rgb(0, 0, 0);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255, 255, 255);
+  width: 500px;
+  height: 300px;
+  text-align: center;
+  opacity: 0.8;
+}
+.successfully-saved__ssgreen {
+  font-size: 140px;
+  border: 8px solid rgb(0, 210, 0);
+  color: rgb(0, 210, 0);
+  border-radius: 50%;
+  width: 180px;
+  height: 180px;
+  text-align: center;
+  margin-top: 20px;
+  transform: translateX(-50%);
+  margin-left: 50%;
+}
+.successfully-saved__text {
+  font-size: 50px;
+}
+
+.didnt-save {
+  z-index: 3;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 6px;
+  color: rgb(0, 0, 0);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255, 255, 255);
+  width: 500px;
+  height: 300px;
+  text-align: center;
+  opacity: 0.8;
+}
+.didnt-save__dsred {
+  font-size: 130px;
+  border: 10px solid rgb(210, 0, 0);
+  color: rgb(210, 0, 0);
+  border-radius: 50%;
+  width: 180px;
+  height: 180px;
+  text-align: center;
+  margin-top: 20px;
+  transform: translateX(-50%);
+  margin-left: 50%;
+}
+.didnt-save__text {
+  font-size: 50px;
+}
+
+@keyframes colors {
+  0% {
+    background-color: rgb(255, 0, 0);
+  }
+  50% {
+    background-color: rgb(0, 255, 0);
+  }
+  100% {
+    background-color: rgb(255, 0, 0);
+  }
+}
+.click {
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 200px;
+  height: 45px;
+  background-color: rgb(255, 0, 0);
+  animation-name: colors;
+  animation-duration: 0.2s;
+  animation-iteration-count: infinite;
+}
+
+.btn {
+  border-radius: 5px;
+  border: 1px solid rgb(0, 0, 0);
+  cursor: pointer;
+  transition: ease 0.35s;
+  color: rgb(0, 0, 0);
+}
+.btn:hover {
+  filter: brightness(1.5);
+}
+.btn:active {
+  filter: contrast(0.8);
+}
+
+.hidden {
+  display: none;
+}/*# sourceMappingURL=02 ► A dialog with three buttons - sass.css.map */
