--- a/03 ■► JS DOM/tasks/2023 → 02 → 21/05 ► AJAX request example - sass.css
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 21/05 ► AJAX request example - sass.css
@@ -1,1 +1,140 @@
-/*# sourceMappingURL=05 ► AJAX request example - sass.css.map */
+* html, * body, * h1, * h2, * h3, * h4, * h5, * h6, * ul, * p {
+  margin: 0;
+  padding: 0;
+}
+* li {
+  list-style: none;
+}
+* a {
+  text-decoration: none;
+}
+
+.reqscrn {
+  z-index: 2;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
+  width: 450px;
+  height: 150px;
+  border-radius: 8px;
+  text-align: center;
+}
+.reqscrn__header {
+  margin-top: 20px;
+}
+.reqscrn__bar {
+  border: 1px solid rgb(0, 0, 0);
+  outline: hidden;
+  border-radius: 8px;
+  margin: 15px 0;
+  width: 60%;
+  height: 30px;
+  padding-left: 5%;
+  color: rgb(0, 0, 0);
+}
+.reqscrn__request {
+  border: 1px solid rgb(0, 0, 0);
+  background-color: rgb(160, 80, 250);
+  color: rgb(255, 255, 255);
+  border-radius: 6px;
+  padding: 5px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.reqscrn__request:hover {
+  filter: brightness(0.4);
+  scale: 1.2;
+}
+.reqscrn__cancel {
+  border: 1px solid rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  border-radius: 6px;
+  padding: 5px;
+  cursor: pointer;
+}
+.reqscrn__cancel:hover {
+  filter: brightness(0.4);
+  scale: 1.2;
+}
+
+.overlay {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 750px;
+  background: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
+}
+
+.random {
+  z-index: 2;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
+  width: 400px;
+  height: 600px;
+  border-radius: 8px;
+  text-align: center;
+}
+.random__image {
+  border: 1px solid rgb(0, 0, 0);
+  width: 84%;
+  height: 500px;
+  margin-top: 5px;
+  margin-left: 8%;
+}
+.random__image img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.random__text {
+  margin: 14px 0;
+  overflow: hidden;
+}
+.random__ok {
+  width: 60px;
+  height: 30px;
+  border: 3px solid rgb(128, 64, 255);
+  background-color: rgb(128, 16, 255);
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  border-radius: 6px;
+}
+.random__ok:hover {
+  filter: invert(1);
+}
+
+.btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 140px;
+  height: 40px;
+  border: 1px solid rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  border-radius: 6px;
+}
+.btn:hover {
+  filter: invert(1);
+}
+
+.hidden {
+  display: none;
+}/*# sourceMappingURL=05 ► AJAX request example - sass.css.map */
