--- a/03 ■► JS DOM/tasks/2023 → 02 → 22/01 ► single item slide.css
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 22/01 ► single item slide.css
@@ -63,4 +63,31 @@
 .slide img {
   width: 100%;
   border-radius: 18px;
+}
+
+.test-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 1px solid red;
+  background-color: black;
+  color: red;
+  font-size: 25px;
+  transition: all 0.3s;
+}
+.test-btn:hover {
+  border: 1px solid greenyellow;
+  background-color: grey;
+  color: greenyellow;
+  transition: all 0.3s;
+}
+.test-btn:active {
+  border: 1px solid blue;
+  background-color: white;
+  color: blue;
 }/*# sourceMappingURL=01 ► single item slide.css.map */
