update February 27, 2023 at 14:29

--- a/03 ■► JS DOM/tasks/2023 → 02 → 22/04 ► multiple items with autoplay - sass - Copy.css
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 22/04 ► multiple items with autoplay - sass - Copy.css
@@ -124,9 +124,12 @@
   height: 10px;
   border-radius: 50%;
   background-color: rgb(255, 255, 255);
+  cursor: pointer;
+  opacity: 0.5;
 }
 
 .selected {
+  opacity: 1;
   scale: 1.1;
   border: 1px solid rgb(255, 80, 80);
   background: radial-gradient(rgb(255, 255, 255), rgb(255, 10, 10));
