--- a/03 ■► JS DOM/tasks/2023 → 02 → 22/04 ► multiple items with autoplay - sass - Copy.scss
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 22/04 ► multiple items with autoplay - sass - Copy.scss
@@ -1,3 +1,4 @@
+// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 * {
     html, body, h1, h2, h3, h4, h5, h6, ul, p {
         margin: 0;
@@ -10,14 +11,14 @@
         text-decoration: none;
     }
 }
-
+// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 .cover-left {
     left: 0%;
 }
 .cover-right {
     left: 95%;
 }
-
+// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 .container {
     z-index: 1;
     position: absolute;
@@ -75,7 +76,7 @@
         }
     }
 }
-
+// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 .btn {
     z-index: 4;
     position: absolute;
@@ -109,7 +110,7 @@
 .btn-next {
     left: 95%;
 }
-
+// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 .dots {
     z-index: 4;
     width: 500px;
@@ -129,10 +130,13 @@
         height: 10px;
         border-radius: 50%;
         background-color: rgb(255,255,255);
+        cursor: pointer;
+        opacity: 0.5;
     }
 }
-
+// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 .selected {
+    opacity: 1.0;
     scale: 1.1;
     border: 1px solid rgb(255,80,80);
     background: radial-gradient(
@@ -141,3 +145,4 @@
     );
     filter: drop-shadow(0px 0px 3px rgba(255,0,0,1.0));
 }
+// ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
