--- a/03 ■► JS DOM/tasks/2023 → 02 → 22/05 ► center mode - sass.scss
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 22/05 ► center mode - sass.scss
@@ -1,75 +1,61 @@
-// zeroing settings
 * {
-    body, html, h1, h2, h3, h4, h5, h6, ul, p {
-        margin: 0px;
-        padding: 0px;
-    }
-    a {
-        text-decoration: none;
+    html, body, h1, h2, h3, h4, h5, h6, ul, p {
+        margin: 0;
+        padding: 0;
     }
     li {
         list-style: none;
     }
-}
-
-.slider {
-    position: relative;
-    border: 1px solid red;
-    width: 99.81%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    column-gap: 1%;
-    overflow: hidden;
-}
-
-.slide {
-    width: 150px;
-    z-index: 1;
-    border: 1px solid greenyellow;
-
-    img {
-        object-fit: cover;
-        width: 100%;
-        height: 220px;
-        transition: all 0.35s;
+    a {
+        text-decoration: none;
     }
 }
 
-.btn {
+.container {
+    border: 1px solid rgb(0,0,0);
+    width: 600px;
+    height: 300px;
     position: absolute;
     top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 2;
-
-    width: 30px;
-    height: 80px;
-    color: rgb(128,128,128);
-    border: 1px solid rgb(128,128,128);
-    border-radius: 6px;
-    background-color: rgb(150,150,150);
-
-    cursor: pointer;
-    transition: ease 0.2s;
-    &:hover {
-        color: rgb(0,0,0);
+    &__header {
+        font-size: 40px;
+    }
+    &__slides {
         border: 1px solid rgb(0,0,0);
+        width: 100px;
+        height: 80px;
         background-color: rgb(255,255,255);
-        transition: ease 0.2s;
-    }
-    &:active {
-        color: rgb(255,128,0);
-        background: linear-gradient(
-            to top, 
-            rgb(32,32,32), 
-            rgb(128,128,128));
-        transition: ease 0.2s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+        color: rgb(0,0,0);
     }
 }
 
-.btn-prev {
-    left: 2%;
-}
 .btn-next {
-    left: 98%;
+    position: absolute;
+    top: 50%;
+    left: 95%;
+    transform: translate(-50%, -50%);
+    border: 1px solid rgb(0,0,0);
+    background-color: rgb(255,255,255);
+    color: rgb(0,0,0);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+}
+.btn-prev {
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    transform: translate(-50%, -50%);
+    border: 1px solid rgb(0,0,0);
+    background-color: rgb(255,255,255);
+    color: rgb(0,0,0);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
 }
