--- a/03 ■► JS DOM/tasks/2023 → 02 → 22/07 ► slider sync - sass - Copy.css
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 22/07 ► slider sync - sass - Copy.css
@@ -1,69 +1,53 @@
-* body, * html, * h1, * h2, * h3, * h4, * h5, * h6, * ul, * p {
-  margin: 0px;
-  padding: 0px;
-}
-* a {
-  text-decoration: none;
+* body, * html, * h1, * h2, * h3, * h4, * h5, * h6, * ul p {
+  margin: 0;
+  padding: 0;
 }
 * li {
   list-style: none;
 }
+* a {
+  text-decoration: none;
+}
+
+.btn {
+  border: 1px solid rgb(128, 128, 128);
+  color: rgb(128, 128, 128);
+  background-color: rgb(208, 208, 208);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.btn:hover {
+  border: 1px solid rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+}
+.btn-prev {
+  left: 5%;
+}
+.btn-next {
+  left: 95%;
+}
 
 .slider {
-  position: relative;
-  border: 1px solid red;
-  width: 99.81%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  -moz-column-gap: 1%;
-       column-gap: 1%;
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  border: 1px solid rgb(0, 0, 0);
   overflow: hidden;
 }
 
 .slide {
-  width: 150px;
-  z-index: 1;
-  border: 1px solid greenyellow;
+  width: 70%;
+  position: absolute;
+  padding: 3% 15%;
+  transition: all 0.4s;
 }
 .slide img {
-  -o-object-fit: cover;
-     object-fit: cover;
   width: 100%;
-  height: 220px;
-  transition: all 0.35s;
-}
-
-.btn {
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 30px;
-  height: 80px;
-  color: rgb(128, 128, 128);
-  border: 1px solid rgb(128, 128, 128);
-  border-radius: 6px;
-  background-color: rgb(150, 150, 150);
-  cursor: pointer;
-  transition: ease 0.2s;
-}
-.btn:hover {
-  color: rgb(0, 0, 0);
-  border: 1px solid rgb(0, 0, 0);
-  background-color: rgb(255, 255, 255);
-  transition: ease 0.2s;
-}
-.btn:active {
-  color: rgb(255, 128, 0);
-  background: linear-gradient(to top, rgb(32, 32, 32), rgb(128, 128, 128));
-  transition: ease 0.2s;
-}
-
-.btn-prev {
-  left: 2%;
-}
-
-.btn-next {
-  left: 98%;
+  border-radius: 18px;
 }/*# sourceMappingURL=07 ► slider sync - sass - Copy.css.map */
