update March 2, 2023 at 14:43

--- a/03 ■► JS DOM/tasks/2023 → 03 → 01/01 ► objects array to table which generated in javascript.scss
+++ b/03 ■► JS DOM/tasks/2023 → 03 → 01/01 ► objects array to table which generated in javascript.scss
@@ -1,6 +1,4 @@
-// ZEROING DEFAULTS
 * {
-    font-family: 'Montserrat', sans-serif;
     html, body, h1, h2, h3, h4, h5, h6, p, ul {
         margin: 0;
         padding: 0;
@@ -13,4 +11,11 @@
     }
 }
 
-// 
+.table-design {
+    border: 1px solid rgb(0,0,0);
+    border-collapse: collapse;
+}
+
+.panels {
+    padding: 10px;
+}
