--- a/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/projectNameHere-homepage.css
+++ b/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/projectNameHere-homepage.css
@@ -1,3 +1,6 @@
+* {
+  font-family: "Montserrat", sans-serif;
+}
 * html, * body, * h1, * h2, * h3, * h4, * h5, * h6, * p, * ul {
   margin: 0;
   padding: 0;
