--- a/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.css
+++ b/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.css
@@ -13,15 +13,8 @@
   color: rgb(8, 8, 8);
 }
 * a:hover {
-  color: rgb(255, 0, 0);
+  color: rgb(128, 0, 255);
   transition: ease-in-out 0.2s;
-}
-
-#nav .nav {
-  border: 1px solid gray;
-  box-sizing: border-box;
-  width: 100%;
-  height: 40px;
 }
 
 #header .header {
@@ -29,11 +22,15 @@
   box-sizing: border-box;
   width: 100%;
   height: 60px;
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(to right, rgb(64, 0, 255), rgb(0, 64, 255));
 }
 #header .header__logo {
-  border: 1px solid violet;
   box-sizing: border-box;
-  width: 20%;
+  width: 16%;
+  filter: invert(0);
+  cursor: pointer;
   height: 100%;
 }
 #header .header__logo--image {
@@ -41,6 +38,48 @@
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+#header .header__search {
+  width: 34%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#header .header__search--bar {
+  position: relative;
+  border: 1px solid rgb(128, 0, 255);
+  border-radius: 5px;
+  width: 80%;
+  height: 30px;
+  outline: none;
+  padding-left: 5%;
+}
+#header .header__search--find {
+  position: absolute;
+  top: 50%;
+  left: 85%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  width: 28px;
+  height: 28px;
+  border: none;
+  border-radius: 50%;
+  background-color: transparent;
+  color: rgb(8, 8, 8);
+}
+#header .header__userpanel {
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#nav .nav {
+  border: 1px solid gray;
+  box-sizing: border-box;
+  width: 100%;
+  height: 40px;
 }
 
 #footer {
@@ -51,12 +90,12 @@
 #footer .footer {
   box-sizing: border-box;
   width: 100%;
-  height: 240px;
+  height: 220px;
   display: flex;
   justify-content: center;
 }
 #footer .footer__columns {
-  width: 20%;
+  width: 16%;
 }
 #footer .footer__columns--logo {
   position: relative;
@@ -67,7 +106,7 @@
   height: auto;
 }
 #footer .footer__columns--headers {
-  font-size: 30px;
+  font-size: 24px;
   text-transform: uppercase;
   letter-spacing: 2px;
   margin: 20px 0px 20px 0px;
@@ -75,7 +114,7 @@
 #footer .footer__columns--lists {
   width: -moz-fit-content;
   width: fit-content;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 500;
   transition: ease-in-out 0.2s;
 }
@@ -90,18 +129,21 @@
   box-sizing: border-box;
   width: 100%;
   height: 30px;
+  border: 1px solid blueviolet;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 0px 40px 0px;
-  font-size: 16px;
+  justify-content: center;
+  font-size: 14px;
   font-weight: 500;
 }
+#footer .bottom__rights {
+  width: 40%;
+}
 #footer .bottom__conditions {
-  width: 35%;
+  width: 40%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .hidden {
